deploy: 49d94a392425bb6c40699600e972663050dc59b6

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -339,6 +339,9 @@
                           <li>
                               <a href="MacroTools.Cheats.TestMode.html" name="" title="TestMode">TestMode</a>
                           </li>
+                          <li>
+                              <a href="MacroTools.Cheats.TestMode.CheatDocumentation.html" name="" title="TestMode.CheatDocumentation">TestMode.CheatDocumentation</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
@@ -1207,6 +1210,19 @@
                           </li>
                           <li>
                               <a href="MacroTools.SpellSystem.SpellTargetType.html" name="" title="SpellTargetType">SpellTargetType</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
+                    <a href="MacroTools.Timer.html" name="" title="MacroTools.Timer">MacroTools.Timer</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="MacroTools.Timer.ITimer.html" name="" title="ITimer">ITimer</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Timer.TimerQueue.html" name="" title="TimerQueue">TimerQueue</a>
                           </li>
                     </ul>
                 </li>
