--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -156,6 +156,9 @@
                               <a href="WarcraftLegacies.Source.GameLogic.GameSettings.html" name="" title="GameSettings">GameSettings</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.GameLogic.GameSetupDialogue.html" name="" title="GameSetupDialogue">GameSetupDialogue</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.GameLogic.HeroGlowFix.html" name="" title="HeroGlowFix">HeroGlowFix</a>
                           </li>
                           <li>
@@ -184,6 +187,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.GameLogic.TagSummonedUnits.html" name="" title="TagSummonedUnits">TagSummonedUnits</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.GameLogic.ZandalarGoblinChoiceDialogue.html" name="" title="ZandalarGoblinChoiceDialogue">ZandalarGoblinChoiceDialogue</a>
                           </li>
                     </ul>
                 </li>
