--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -268,6 +268,9 @@
                               <a href="MacroTools.Cheats.CheatFood.html" name="" title="CheatFood">CheatFood</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Cheats.CheatGetUnitAbilities.html" name="" title="CheatGetUnitAbilities">CheatGetUnitAbilities</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Cheats.CheatGod.html" name="" title="CheatGod">CheatGod</a>
                           </li>
                           <li>
@@ -305,6 +308,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatRemove.html" name="" title="CheatRemove">CheatRemove</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Cheats.CheatRemoveAllAbilities.html" name="" title="CheatRemoveAllAbilities">CheatRemoveAllAbilities</a>
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatResearchLevel.html" name="" title="CheatResearchLevel">CheatResearchLevel</a>
