--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -918,6 +918,9 @@
                               <a href="MacroTools.PassiveAbilities.LocationBasedFlavourSetting.html" name="" title="LocationBasedFlavourSetting">LocationBasedFlavourSetting</a>
                           </li>
                           <li>
+                              <a href="MacroTools.PassiveAbilities.NoTargetSpellOnAttack.html" name="" title="NoTargetSpellOnAttack">NoTargetSpellOnAttack</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.PassiveAbilities.PersistentSoul.html" name="" title="PersistentSoul">PersistentSoul</a>
                           </li>
                           <li>
