deploy: 3773bc7135156ddbd89dd2cd856de25c3302bf9c

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -654,6 +654,15 @@
                               <a href="WarcraftLegacies.Source.Quests.Legion.QuestConsumeTree.html" name="" title="QuestConsumeTree">QuestConsumeTree</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html" name="" title="QuestControlMonastery">QuestControlMonastery</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html" name="" title="QuestControlShadowfang">QuestControlShadowfang</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html" name="" title="QuestControlSpire">QuestControlSpire</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Legion.QuestLegionCaptureSunwell.html" name="" title="QuestLegionCaptureSunwell">QuestLegionCaptureSunwell</a>
                           </li>
                           <li>
