deploy: be694fc0a964a191c1e4fec57e3c1075160ae860

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -1098,6 +1098,12 @@
                               <a href="MacroTools.Spells.InspireMadness.html" name="" title="InspireMadness">InspireMadness</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Spells.InstantKill.html" name="" title="InstantKill">InstantKill</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Spells.InstantKill.KillTarget.html" name="" title="InstantKill.KillTarget">InstantKill.KillTarget</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Spells.MassAnySpell.html" name="" title="MassAnySpell">MassAnySpell</a>
                           </li>
                           <li>
