deploy: a4b18ce82f5855894cce6c37591cac91f62ef568

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1370,6 +1370,9 @@
                               <a href="WarcraftLegacies.Source.Setup.Spells.SentinelSpellSetup.html" name="" title="SentinelSpellSetup">SentinelSpellSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.SharedSpellSetup.html" name="" title="SharedSpellSetup">SharedSpellSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.StormwindSpellSetup.html" name="" title="StormwindSpellSetup">StormwindSpellSetup</a>
                           </li>
                           <li>
