--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -1137,6 +1137,9 @@
                               <a href="MacroTools.Spells.SummonUnits.html" name="" title="SummonUnits">SummonUnits</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Spells.Transfer.html" name="" title="Transfer">Transfer</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Spells.UnholyArmor.html" name="" title="UnholyArmor">UnholyArmor</a>
                           </li>
                           <li>
