deploy: 9f9b7d118701fa7679a24085848834214278d3dc

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -346,6 +346,9 @@
                               <a href="WarcraftLegacies.Source.Quests.QuestDragonsOfNightmare.html" name="" title="QuestDragonsOfNightmare">QuestDragonsOfNightmare</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.QuestNavigation.html" name="" title="QuestNavigation">QuestNavigation</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.QuestRagnaros.html" name="" title="QuestRagnaros">QuestRagnaros</a>
                           </li>
                           <li>
