deploy: 86ad75c6b07e0f25d29f6b2db0ee1ef365c78769

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -579,6 +579,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Goblin.QuestGoblinEmpire.html" name="" title="QuestGoblinEmpire">QuestGoblinEmpire</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Goblin.QuestKezan.html" name="" title="QuestKezan">QuestKezan</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Goblin.QuestLumberMarket.html" name="" title="QuestLumberMarket">QuestLumberMarket</a>
                           </li>
                           <li>
@@ -1377,6 +1380,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.StormwindSpellSetup.html" name="" title="StormwindSpellSetup">StormwindSpellSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.TrollSpellSetup.html" name="" title="TrollSpellSetup">TrollSpellSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.WarsongSpellSetup.html" name="" title="WarsongSpellSetup">WarsongSpellSetup</a>
