deploy: ffcde822bd3f0e66c28205eff8e96dbfbc3e23e0

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -364,6 +364,16 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.html" name="" title="WarcraftLegacies.Source.Quests.CrisisSpawn">WarcraftLegacies.Source.Quests.CrisisSpawn</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html" name="" title="QuestCthunSpawn">QuestCthunSpawn</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="WarcraftLegacies.Source.Quests.Dalaran.html" name="" title="WarcraftLegacies.Source.Quests.Dalaran">WarcraftLegacies.Source.Quests.Dalaran</a>
                     
                     <ul class="nav level2">
