--- a/api-source/WarcraftLegacies.Source.Setup.TeamSetup.html
+++ b/api-source/WarcraftLegacies.Source.Setup.TeamSetup.html
@@ -120,18 +120,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_TeamSetup_Draenei.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.TeamSetup.Draenei%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_TeamSetup_Crisis.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.TeamSetup.Crisis%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/TeamSetup.cs/#L18">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/TeamSetup.cs/#L17">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_TeamSetup_Draenei_" data-uid="WarcraftLegacies.Source.Setup.TeamSetup.Draenei*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_TeamSetup_Draenei" data-uid="WarcraftLegacies.Source.Setup.TeamSetup.Draenei">Draenei</h4>
+  <a id="WarcraftLegacies_Source_Setup_TeamSetup_Crisis_" data-uid="WarcraftLegacies.Source.Setup.TeamSetup.Crisis*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_TeamSetup_Crisis" data-uid="WarcraftLegacies.Source.Setup.TeamSetup.Crisis">Crisis</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static Team Draenei { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public static Team Crisis { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -150,18 +150,18 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_TeamSetup_Dragonmaw.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.TeamSetup.Dragonmaw%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_TeamSetup_Draenei.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.TeamSetup.Draenei%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/TeamSetup.cs/#L17">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/TeamSetup.cs/#L18">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_TeamSetup_Dragonmaw_" data-uid="WarcraftLegacies.Source.Setup.TeamSetup.Dragonmaw*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_TeamSetup_Dragonmaw" data-uid="WarcraftLegacies.Source.Setup.TeamSetup.Dragonmaw">Dragonmaw</h4>
+  <a id="WarcraftLegacies_Source_Setup_TeamSetup_Draenei_" data-uid="WarcraftLegacies.Source.Setup.TeamSetup.Draenei*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_TeamSetup_Draenei" data-uid="WarcraftLegacies.Source.Setup.TeamSetup.Draenei">Draenei</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static Team Dragonmaw { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public static Team Draenei { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
