--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1125,6 +1125,12 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.FactionSetup.CrisisCaptainSetup.html" name="" title="CrisisCaptainSetup">CrisisCaptainSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.FactionSetup.CrisisFootmanSetup.html" name="" title="CrisisFootmanSetup">CrisisFootmanSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.FactionSetup.DalaranSetup.html" name="" title="DalaranSetup">DalaranSetup</a>
                           </li>
                           <li>
@@ -1270,6 +1276,9 @@
                     <a href="WarcraftLegacies.Source.Setup.QuestSetup.html" name="" title="WarcraftLegacies.Source.Setup.QuestSetup">WarcraftLegacies.Source.Setup.QuestSetup</a>
                     
                     <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.QuestSetup.CrisisQuestSetup.html" name="" title="CrisisQuestSetup">CrisisQuestSetup</a>
+                          </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.QuestSetup.DalaranQuestSetup.html" name="" title="DalaranQuestSetup">DalaranQuestSetup</a>
                           </li>
