deploy: 065ca68de9003b0080aeae90658cb14736473bf4

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -370,6 +370,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html" name="" title="QuestCthunSpawn">QuestCthunSpawn</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestOldGodPick.html" name="" title="QuestOldGodPick">QuestOldGodPick</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
