deploy: a3db365ecc08879cf3dacde14b1e01e168817572

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -385,6 +385,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestOldGodPick.html" name="" title="QuestOldGodPick">QuestOldGodPick</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestTwilightHammerSpawn.html" name="" title="QuestTwilightHammerSpawn">QuestTwilightHammerSpawn</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
@@ -1216,6 +1219,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.FactionSetup.StormwindSetup.html" name="" title="StormwindSetup">StormwindSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.FactionSetup.TwilightHammerSetup.html" name="" title="TwilightHammerSetup">TwilightHammerSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.FactionSetup.WarsongSetup.html" name="" title="WarsongSetup">WarsongSetup</a>
