deploy: 23723c37dceb74e0311bd90e86890010307eb504

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -900,6 +900,9 @@
                               <a href="MacroTools.PassiveAbilities.AnimationSpeedMultiplier.html" name="" title="AnimationSpeedMultiplier">AnimationSpeedMultiplier</a>
                           </li>
                           <li>
+                              <a href="MacroTools.PassiveAbilities.ChannelSpellOnAttack.html" name="" title="ChannelSpellOnAttack">ChannelSpellOnAttack</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.PassiveAbilities.DefensiveOrbs.html" name="" title="DefensiveOrbs">DefensiveOrbs</a>
                           </li>
                           <li>
