deploy: 00e24b68ddbef7e4110cb8fc18c56e1ddc6a8187

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -377,10 +377,7 @@
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html" name="" title="QuestCthunSpawn">QuestCthunSpawn</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestNazjatarSpawnCaptain.html" name="" title="QuestNazjatarSpawnCaptain">QuestNazjatarSpawnCaptain</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestNazjatarSpawnFootman.html" name="" title="QuestNazjatarSpawnFootman">QuestNazjatarSpawnFootman</a>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestNazjatarSpawn.html" name="" title="QuestNazjatarSpawn">QuestNazjatarSpawn</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestOldGodPick.html" name="" title="QuestOldGodPick">QuestOldGodPick</a>
