deploy: 27b1fd331b5d306c3319b31e695cb47860d1798d

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1303,6 +1303,9 @@
                               <a href="WarcraftLegacies.Source.Setup.Legends.LegendTroll.html" name="" title="LegendTroll">LegendTroll</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Legends.LegendTwilight.html" name="" title="LegendTwilight">LegendTwilight</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Legends.LegendWarsong.html" name="" title="LegendWarsong">LegendWarsong</a>
                           </li>
                     </ul>
