deploy: eddc5e0580585a2a1f5fa2d836420593d093559a

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -377,10 +377,22 @@
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html" name="" title="QuestCthunSpawn">QuestCthunSpawn</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.html" name="" title="QuestElfDead">QuestElfDead</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.html" name="" title="QuestHordeDead">QuestHordeDead</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.html" name="" title="QuestIllidariDead">QuestIllidariDead</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestNazjatarSpawn.html" name="" title="QuestNazjatarSpawn">QuestNazjatarSpawn</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestOldGodPick.html" name="" title="QuestOldGodPick">QuestOldGodPick</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.html" name="" title="QuestSADead">QuestSADead</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestTwilightHammerSpawn.html" name="" title="QuestTwilightHammerSpawn">QuestTwilightHammerSpawn</a>
