deploy: 3c6d47a0d479f71216d99d7c5a99512eae43fe48

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -735,6 +735,12 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="MacroTools.ObjectiveSystem.Objectives.FactionBased.ObjectiveFactionContolPointAmountGreaterThan.html" name="" title="ObjectiveFactionContolPointAmountGreaterThan">ObjectiveFactionContolPointAmountGreaterThan</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.ObjectiveSystem.Objectives.FactionBased.ObjectiveFactionContolPointAmountLessThan.html" name="" title="ObjectiveFactionContolPointAmountLessThan">ObjectiveFactionContolPointAmountLessThan</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.ObjectiveSystem.Objectives.FactionBased.ObjectiveFactionDefeated.html" name="" title="ObjectiveFactionDefeated">ObjectiveFactionDefeated</a>
                           </li>
                           <li>
@@ -805,6 +811,22 @@
                           </li>
                           <li>
                               <a href="MacroTools.ObjectiveSystem.Objectives.QuestBased.ObjectiveDontCompleteQuest.html" name="" title="ObjectiveDontCompleteQuest">ObjectiveDontCompleteQuest</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
+                    <a href="MacroTools.ObjectiveSystem.Objectives.TeamBased.html" name="" title="MacroTools.ObjectiveSystem.Objectives.TeamBased">MacroTools.ObjectiveSystem.Objectives.TeamBased</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="MacroTools.ObjectiveSystem.Objectives.TeamBased.ObjectiveTeamContolPointAmountGreaterThan.html" name="" title="ObjectiveTeamContolPointAmountGreaterThan">ObjectiveTeamContolPointAmountGreaterThan</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.ObjectiveSystem.Objectives.TeamBased.ObjectiveTeamContolPointAmountLessThan.html" name="" title="ObjectiveTeamContolPointAmountLessThan">ObjectiveTeamContolPointAmountLessThan</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.ObjectiveSystem.Objectives.TeamBased.ObjectiveTeamDefeated.html" name="" title="ObjectiveTeamDefeated">ObjectiveTeamDefeated</a>
                           </li>
                     </ul>
                 </li>
