--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -386,6 +386,9 @@
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.html" name="" title="QuestIllidariDead">QuestIllidariDead</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestNADead.html" name="" title="QuestNADead">QuestNADead</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestNazjatarSpawn.html" name="" title="QuestNazjatarSpawn">QuestNazjatarSpawn</a>
                           </li>
                           <li>
@@ -393,6 +396,12 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.html" name="" title="QuestSADead">QuestSADead</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestScourgeDead.html" name="" title="QuestScourgeDead">QuestScourgeDead</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestTurn25OG.html" name="" title="QuestTurn25OG">QuestTurn25OG</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.CrisisSpawn.QuestTwilightHammerSpawn.html" name="" title="QuestTwilightHammerSpawn">QuestTwilightHammerSpawn</a>
