deploy: 81cc062f51f388a884b18cf54db9605828398a01

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -162,6 +162,9 @@
                               <a href="WarcraftLegacies.Source.GameLogic.HeroGlowFix.html" name="" title="HeroGlowFix">HeroGlowFix</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.GameLogic.IllidariSunfuryChoiceDialogue.html" name="" title="IllidariSunfuryChoiceDialogue">IllidariSunfuryChoiceDialogue</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.GameLogic.InfoQuests.html" name="" title="InfoQuests">InfoQuests</a>
                           </li>
                           <li>
@@ -1237,6 +1240,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.FactionSetup.StormwindSetup.html" name="" title="StormwindSetup">StormwindSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.FactionSetup.SunfurySetup.html" name="" title="SunfurySetup">SunfurySetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.FactionSetup.TwilightHammerSetup.html" name="" title="TwilightHammerSetup">TwilightHammerSetup</a>
