--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -355,9 +355,6 @@
                               <a href="WarcraftLegacies.Source.Quests.QuestRagnaros.html" name="" title="QuestRagnaros">QuestRagnaros</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.QuestSkullOfGuldan.html" name="" title="QuestSkullOfGuldan">QuestSkullOfGuldan</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.Quests.QuestTombOfSargeras.html" name="" title="QuestTombOfSargeras">QuestTombOfSargeras</a>
                           </li>
                           <li>
@@ -416,6 +413,9 @@
                     <a href="WarcraftLegacies.Source.Quests.Dalaran.html" name="" title="WarcraftLegacies.Source.Quests.Dalaran">WarcraftLegacies.Source.Quests.Dalaran</a>
                     
                     <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Dalaran.QuestAegwynn.html" name="" title="QuestAegwynn">QuestAegwynn</a>
+                          </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Dalaran.QuestBlueDragons.html" name="" title="QuestBlueDragons">QuestBlueDragons</a>
                           </li>
