deploy: 1360270f4085e98b7bfc6d69f5667d584a262df0

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -1117,6 +1117,9 @@
                               <a href="MacroTools.Spells.ElectricStrike.html" name="" title="ElectricStrike">ElectricStrike</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Spells.GoldOnCast.html" name="" title="GoldOnCast">GoldOnCast</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Spells.GrantMana.html" name="" title="GrantMana">GrantMana</a>
                           </li>
                           <li>
