deploy: c06339520f9741a62b489378a2fb546642096fb3

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -928,6 +928,16 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="WarcraftLegacies.Source.Quests.Sunfury.html" name="" title="WarcraftLegacies.Source.Quests.Sunfury">WarcraftLegacies.Source.Quests.Sunfury</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestTempestKeep.html" name="" title="QuestTempestKeep">QuestTempestKeep</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="WarcraftLegacies.Source.Quests.Warsong.html" name="" title="WarcraftLegacies.Source.Quests.Warsong">WarcraftLegacies.Source.Quests.Warsong</a>
                     
                     <ul class="nav level2">
@@ -1398,6 +1408,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.QuestSetup.StormwindQuestSetup.html" name="" title="StormwindQuestSetup">StormwindQuestSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.QuestSetup.SunfuryQuestSetup.html" name="" title="SunfuryQuestSetup">SunfuryQuestSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.QuestSetup.WarsongQuestSetup.html" name="" title="WarsongQuestSetup">WarsongQuestSetup</a>
