deploy: 291a719c36b3df9dfeb55e20d6e20020acedad5d

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -446,6 +446,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Dalaran.QuestTheNexus.html" name="" title="QuestTheNexus">QuestTheNexus</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html" name="" title="QuestTheramore">QuestTheramore</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
@@ -682,9 +685,6 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestOldHatreds.html" name="" title="QuestOldHatreds">QuestOldHatreds</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html" name="" title="QuestTheramore">QuestTheramore</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.html" name="" title="QuestUnlockShip">QuestUnlockShip</a>
