deploy: 39935c57e5a1a5ae574b1d819e98e6948598ae02

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -932,7 +932,13 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestSummonKil.html" name="" title="QuestSummonKil">QuestSummonKil</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestTempestKeep.html" name="" title="QuestTempestKeep">QuestTempestKeep</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestWellOfEternity.html" name="" title="QuestWellOfEternity">QuestWellOfEternity</a>
                           </li>
                     </ul>
                 </li>
