deploy: 81a41526e4a8d20e67a727c52dd815ce321c4397

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -932,6 +932,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestSolarian.html" name="" title="QuestSolarian">QuestSolarian</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestSummonKil.html" name="" title="QuestSummonKil">QuestSummonKil</a>
                           </li>
                           <li>
