deploy: 4a39ac8fd9fc354202d2f930f40b998b59cf4f25

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -854,6 +854,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Scourge.QuestSapphiron.html" name="" title="QuestSapphiron">QuestSapphiron</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Scourge.QuestScouringofLordaeron.html" name="" title="QuestScouringofLordaeron">QuestScouringofLordaeron</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Scourge.QuestSpiderWar.html" name="" title="QuestSpiderWar">QuestSpiderWar</a>
                           </li>
                     </ul>
@@ -931,6 +934,9 @@
                     <a href="WarcraftLegacies.Source.Quests.Sunfury.html" name="" title="WarcraftLegacies.Source.Quests.Sunfury">WarcraftLegacies.Source.Quests.Sunfury</a>
                     
                     <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestArea52.html" name="" title="QuestArea52">QuestArea52</a>
+                          </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestSolarian.html" name="" title="QuestSolarian">QuestSolarian</a>
                           </li>
