deploy: 309a9b9f6073126532e64fceb3acd940ff4cd572

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -947,6 +947,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestTempestKeep.html" name="" title="QuestTempestKeep">QuestTempestKeep</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestUpperNetherstorm.html" name="" title="QuestUpperNetherstorm">QuestUpperNetherstorm</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Sunfury.QuestWellOfEternity.html" name="" title="QuestWellOfEternity">QuestWellOfEternity</a>
                           </li>
                     </ul>
