--- a/api-source/WarcraftLegacies.Source.GameLogic.GameEnd.ControlPointVictory.html
+++ b/api-source/WarcraftLegacies.Source.GameLogic.GameEnd.ControlPointVictory.html
@@ -102,7 +102,7 @@
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public const int CpsVictory = null</code></pre>
+    <pre><code class="lang-csharp hljs">public static int CpsVictory</code></pre>
   </div>
   <h5 class="fieldValue">Field Value</h5>
   <table class="table table-bordered table-striped table-condensed">
