--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -171,6 +171,9 @@
                               <a href="WarcraftLegacies.Source.GameLogic.OpenAllianceVote.html" name="" title="OpenAllianceVote">OpenAllianceVote</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.GameLogic.QuelGilneasChoiceDialogue.html" name="" title="QuelGilneasChoiceDialogue">QuelGilneasChoiceDialogue</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.GameLogic.RefundZeroLimitUnits.html" name="" title="RefundZeroLimitUnits">RefundZeroLimitUnits</a>
                           </li>
                           <li>
