deploy: 83fc28d70b3f620895435fb711af003c5f306473

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -1165,6 +1165,9 @@
                               <a href="MacroTools.Spells.SummonUnits.html" name="" title="SummonUnits">SummonUnits</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Spells.SummonUnitsTarget.html" name="" title="SummonUnitsTarget">SummonUnitsTarget</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Spells.Transfer.html" name="" title="Transfer">Transfer</a>
                           </li>
                           <li>
