deploy: b37b74bbd6a39db8ef3fbc24d70f1f253eba878b

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -168,6 +168,9 @@
                               <a href="WarcraftLegacies.Source.GameLogic.InfoQuests.html" name="" title="InfoQuests">InfoQuests</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.GameLogic.LegionForsakenChoiceDialogue.html" name="" title="LegionForsakenChoiceDialogue">LegionForsakenChoiceDialogue</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.GameLogic.OpenAllianceVote.html" name="" title="OpenAllianceVote">OpenAllianceVote</a>
                           </li>
                           <li>
