deploy: 5577cf00efdc2f211cc77786a3c1b4b207d0687a

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -1096,6 +1096,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="MacroTools.Spells.AnySpellOnTarget.html" name="" title="AnySpellOnTarget">AnySpellOnTarget</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Spells.Ascendance.html" name="" title="Ascendance">Ascendance</a>
                           </li>
                           <li>
