deploy: 050dd16106cecc4f2829d05261365e415b4f5241

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1028,6 +1028,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Researches.FlightPath.html" name="" title="FlightPath">FlightPath</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Researches.PowerResearch.html" name="" title="PowerResearch">PowerResearch</a>
                           </li>
                           <li>
