deploy: 994a20d76f905281b19bc6e01b4fb0d145d1afc1

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -825,6 +825,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestTheBloodElves.html" name="" title="QuestTheBloodElves">QuestTheBloodElves</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Quelthalas.QuestUnlockSpire.html" name="" title="QuestUnlockSpire">QuestUnlockSpire</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
