deploy: 6557302423da412fc160d2d24352d004ec48eeeb

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -969,6 +969,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Warsong.QuestBloodpact.html" name="" title="QuestBloodpact">QuestBloodpact</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Warsong.QuestChenStormstout.html" name="" title="QuestChenStormstout">QuestChenStormstout</a>
                           </li>
                           <li>
