deploy: 069b156e43634c223c519fcea521d420e4ef3625

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -678,6 +678,9 @@
                               <a href="WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html" name="" title="QuestControlSpire">QuestControlSpire</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html" name="" title="QuestKillCapitalPalace">QuestKillCapitalPalace</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Legion.QuestLegionCaptureSunwell.html" name="" title="QuestLegionCaptureSunwell">QuestLegionCaptureSunwell</a>
                           </li>
                           <li>
@@ -685,6 +688,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Legion.QuestSummonLegion.html" name="" title="QuestSummonLegion">QuestSummonLegion</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html" name="" title="QuestUnlockAstral">QuestUnlockAstral</a>
                           </li>
                     </ul>
                 </li>
