deploy: 5cee09dd94bb1c84e6a57cfe2e479314b874f33c

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1148,6 +1148,9 @@
                               <a href="WarcraftLegacies.Source.Setup.SharedFactionConfigSetup.html" name="" title="SharedFactionConfigSetup">SharedFactionConfigSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.ShipyardBanZonesSetup.html" name="" title="ShipyardBanZonesSetup">ShipyardBanZonesSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.ShoreSetup.html" name="" title="ShoreSetup">ShoreSetup</a>
                           </li>
                           <li>
