deploy: 551a734aaed34df62b587782b9b6d88d3d2c3f98

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -602,6 +602,9 @@
                           <li>
                               <a href="MacroTools.LegendSystem.LegendChangeUnitEventArgs.html" name="" title="LegendChangeUnitEventArgs">LegendChangeUnitEventArgs</a>
                           </li>
+                          <li>
+                              <a href="MacroTools.LegendSystem.Protector.html" name="" title="Protector">Protector</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
