deploy: 34444015f5c7ea954f2a3c77a6de4e786f3b5c06

--- a/api-macroTools/MacroTools.GameTime.html
+++ b/api-macroTools/MacroTools.GameTime.html
@@ -90,7 +90,7 @@ One turn passes every 60 seconds.</p>
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_GameTime_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class GameTime : object, ITimer</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class GameTime : object, ITimer</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
