--- a/api-source/WarcraftLegacies.Source.Cheats.CheatSkipCinematic.html
+++ b/api-source/WarcraftLegacies.Source.Cheats.CheatSkipCinematic.html
@@ -84,7 +84,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_Cheats_CheatSkipCinematic_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class CheatSkipCinematic : object</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class CheatSkipCinematic : object</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
