--- a/api-source/WarcraftLegacies.Source.GameLogic.DisplayIntroText.html
+++ b/api-source/WarcraftLegacies.Source.GameLogic.DisplayIntroText.html
@@ -89,7 +89,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_GameLogic_DisplayIntroText_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class DisplayIntroText : object, ITimer</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class DisplayIntroText : object, ITimer</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
