--- a/api-source/WarcraftLegacies.Source.Quests.QuestDragonsOfNightmare.html
+++ b/api-source/WarcraftLegacies.Source.Quests.QuestDragonsOfNightmare.html
@@ -110,7 +110,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_Quests_QuestDragonsOfNightmare_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class QuestDragonsOfNightmare : QuestData</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class QuestDragonsOfNightmare : QuestData</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
