--- a/api-macroTools/MacroTools.BookSystem.Powers.PowerCard.html
+++ b/api-macroTools/MacroTools.BookSystem.Powers.PowerCard.html
@@ -125,7 +125,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_BookSystem_Powers_PowerCard_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class PowerCard : Card</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class PowerCard : Card</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
