--- a/api-macroTools/MacroTools.Spells.InstantKill.html
+++ b/api-macroTools/MacroTools.Spells.InstantKill.html
@@ -104,7 +104,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_Spells_InstantKill_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class InstantKill : Spell</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class InstantKill : Spell</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
