--- a/api-source/WarcraftLegacies.Source.GameLogic.CinematicMode.html
+++ b/api-source/WarcraftLegacies.Source.GameLogic.CinematicMode.html
@@ -90,7 +90,7 @@ and weather effects for a cinematic experience.</p>
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_GameLogic_CinematicMode_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class CinematicMode : object, ITimer</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class CinematicMode : object, ITimer</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
