--- a/api-source/WarcraftLegacies.Source.Powers.PingPower.html
+++ b/api-source/WarcraftLegacies.Source.Powers.PingPower.html
@@ -110,7 +110,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_Powers_PingPower_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class PingPower : Power</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class PingPower : Power</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
