--- a/api-source/WarcraftLegacies.Source.Quests.Scourge.QuestDestroyStratholme.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Scourge.QuestDestroyStratholme.html
@@ -109,7 +109,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_Quests_Scourge_QuestDestroyStratholme_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class QuestDestroyStratholme : QuestData</code></pre>
+    <pre><code class="lang-csharp hljs">public sealed class QuestDestroyStratholme : QuestData</code></pre>
   </div>
   <h3 id="constructors">Constructors
   </h3>
