--- a/api-macroTools/MacroTools.QuestSystem.QuestData.html
+++ b/api-macroTools/MacroTools.QuestSystem.QuestData.html
@@ -342,7 +342,7 @@ Describes flavour, not mechanics.</p>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">protected abstract string RewardFlavour { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">protected virtual string RewardFlavour { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
