deploy: d2e33c1ffdc0a705979456ec08c9d82bf212a767

--- a/api-macroTools/MacroTools.UnitCategory.html
+++ b/api-macroTools/MacroTools.UnitCategory.html
@@ -93,6 +93,11 @@
     <thead>
     <tbody>
       <tr>
+        <td id="MacroTools_UnitCategory_Portal">Portal</td>
+        <td><p>This unit is a portal</p>
+</td>
+      </tr>
+      <tr>
         <td id="MacroTools_UnitCategory_Shipyard">Shipyard</td>
         <td><p>The unit can train boats.</p>
 </td>
