--- a/api-macroTools/MacroTools.UnitType.html
+++ b/api-macroTools/MacroTools.UnitType.html
@@ -251,19 +251,19 @@
   </table>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_UnitType_Meta.md&amp;value=---%0Auid%3A%20MacroTools.UnitType.Meta%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_UnitType_NeverDelete.md&amp;value=---%0Auid%3A%20MacroTools.UnitType.NeverDelete%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/UnitType.cs/#L37">View Source</a>
   </span>
-  <a id="MacroTools_UnitType_Meta_" data-uid="MacroTools.UnitType.Meta*"></a>
-  <h4 id="MacroTools_UnitType_Meta" data-uid="MacroTools.UnitType.Meta">Meta</h4>
+  <a id="MacroTools_UnitType_NeverDelete_" data-uid="MacroTools.UnitType.NeverDelete*"></a>
+  <h4 id="MacroTools_UnitType_NeverDelete" data-uid="MacroTools.UnitType.NeverDelete">NeverDelete</h4>
   <div class="markdown level1 summary"><p>If true, this unit should never be deleted.</p>
 </div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public bool Meta { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public bool NeverDelete { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
